--- a/app/src/main/res/drawable/item_circular_thin_ring_background.xml
+++ b/app/src/main/res/drawable/item_circular_thin_ring_background.xml
@@ -3,6 +3,7 @@
     android:shape="oval">
     <stroke
         android:width="2dp"
-        android:color="@color/darkvoilet">
+        android:color="@color/light_tone">
     </stroke>
+    <solid android:color="@color/background"/>
 </shape>
