--- a/app/src/main/res/drawable/circular_progress_gray.xml
+++ b/app/src/main/res/drawable/circular_progress_gray.xml
@@ -6,7 +6,7 @@
             android:shape="ring"
             android:thicknessRatio="20.0"
             android:useLevel="false">
-            <solid android:color="@color/pink"/>
+            <solid android:color="#D4DEE7"/>
         </shape>
     </item>
 </layer-list>
