--- a/app/src/main/res/drawable/drawable_radio_group_tab_background.xml
+++ b/app/src/main/res/drawable/drawable_radio_group_tab_background.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#F5F1FF" />
+    <solid android:color="#596879" />
     <stroke android:color="#18212c"
         android:width="0.5dp" />
     <corners android:radius="15dp" />
