--- a/app/src/main/res/drawable/drawable_units_tab_selector.xml
+++ b/app/src/main/res/drawable/drawable_units_tab_selector.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_checked="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/pink" />
+            <solid android:color="@color/light_tone" />
             <corners android:radius="15dp" />
         </shape>
     </item>
