--- a/app/src/main/res/drawable/rounded_edittext.xml
+++ b/app/src/main/res/drawable/rounded_edittext.xml
@@ -1,5 +1,5 @@
 <!-- res/drawable/rounded_edittext_background.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/pink" />
+    <solid android:color="@color/lightblue" />
     <corners android:radius="28dp" />
 </shape>
