--- a/app/src/main/res/layout/activity_exercise.xml
+++ b/app/src/main/res/layout/activity_exercise.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#F3F1FC"
+    android:background="@color/background"
     tools:context="com.example.a7minutesworkout.ExerciseActivity">
 
     <androidx.appcompat.widget.Toolbar
@@ -14,7 +14,7 @@
         android:layout_height="?android:attr/actionBarSize"
         app:layout_constraintTop_toTopOf="parent"
         android:theme="@style/ToolbarTheme"
-        android:background="#F3F1FC"
+        android:background="@color/background"
         app:titleTextColor="@color/white"
         />
 
@@ -28,7 +28,7 @@
         tools:visibility="gone"
         android:fontFamily="@font/nunito_sans_bold"
         android:text="@string/get_ready_for"
-        android:textColor="@color/darkBlue"
+        android:textColor="@color/white"
         android:textSize="40sp"
 
         app:layout_constraintTop_toBottomOf="@id/toolbarExercise"
@@ -43,7 +43,7 @@
         tools:visibility="gone"
         android:fontFamily="@font/nunito_sans_bold"
         android:text="@string/next_step_exercise_name"
-        android:textColor="@color/darkBlue"
+        android:textColor="@color/white"
         android:textSize="20sp"
 
         app:layout_constraintTop_toBottomOf="@+id/tvRestTitle"
@@ -90,7 +90,7 @@
 
                 android:fontFamily="@font/nunito_sans_bold"
                 android:textSize="100sp"
-                android:textColor="@color/darkBlue"
+                android:textColor="@color/white"
                 tools:text="10"/>
         </LinearLayout>
 
@@ -100,7 +100,6 @@
 
     <ImageView
         android:id="@+id/ivImage"
-
         android:layout_width="300dp"
         android:layout_height="300dp"
 
@@ -122,7 +121,7 @@
 
         android:fontFamily="@font/nunito_sans_bold"
         android:text="@string/exercise_name"
-        android:textColor="@color/darkBlue"
+        android:textColor="@color/white"
         android:textSize="30sp"
 
         android:visibility="invisible"
@@ -173,7 +172,7 @@
                 android:fontFamily="@font/nunito_sans_bold"
 
                 android:gravity="center"
-                android:textColor="#5E40A4"
+                android:textColor="@color/white"
                 android:textSize="100sp"
                 tools:text="30" />
         </LinearLayout>
