--- a/app/src/main/res/layout/activity_fall_detection.xml
+++ b/app/src/main/res/layout/activity_fall_detection.xml
@@ -102,7 +102,7 @@
         app:layout_constraintBottom_toTopOf="@+id/BottomNavBar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/main_sos">
+        app:layout_constraintTop_toBottomOf="@+id/imageView">
 
         <LinearLayout
             android:layout_width="match_parent"
