--- a/app/src/main/res/layout/activity_main_workout.xml
+++ b/app/src/main/res/layout/activity_main_workout.xml
@@ -1,94 +1,146 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+
+    tools:context="com.example.a7minutesworkout.MainActivityWorkout"
     android:background="@color/white"
-    tools:context="com.example.a7minutesworkout.MainActivityWorkout">
+    android:paddingTop="10dp"
+    android:paddingBottom="10dp"
+    android:paddingStart="20dp"
+    android:paddingEnd="20dp">
 
-    <!-- Header Layout: Back Button and Title -->
-    <LinearLayout
-        android:layout_width="wrap_content"
+    <!-- Upper Part of the Main Layout -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/upper_part"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="25dp"
-        android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/back_button_logo"
-            android:layout_width="30dp"
-            android:layout_height="38dp"
-            android:src="@drawable/back_arrow_logo" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="SakshamSevak"
-            android:textColor="@color/darkblue"
-            android:textSize="26dp"
-            android:textStyle="bold" />
-    </LinearLayout>
+            android:orientation="vertical"
+
+            app:layout_constraintTop_toTopOf="@id/upper_part"
+            app:layout_constraintBottom_toBottomOf="@id/upper_part"
+            app:layout_constraintStart_toStartOf="@id/upper_part"
+            app:layout_constraintEnd_toEndOf="@id/upper_part">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/back_arrow_logo"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:gravity="center"
+                android:fontFamily="@font/nunito_sans_bold"
+                android:text="SakshamSevak"
+                android:textColor="@color/darkblue"
+                android:textSize="30sp"
+                android:textStyle="bold" />
+
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#f0f0f4"
+                android:layout_marginBottom="10dp"/>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/reminderbot"
+                android:adjustViewBounds="true"
+                android:scaleType="fitCenter" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/nunito_sans_regular"
+                android:gravity="start"
+                android:layout_marginTop="20dp"
+                android:textStyle="bold"
+                android:text="@string/here_are_few_best_scientific_exercise"
+                android:textColor="@color/darkblue"
+                android:textSize="20sp"/>
 
 
-    <!-- Image View -->
-    <ImageView
-        android:id="@+id/gotochatbot"
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:src="@drawable/exerciseimage"
-        android:adjustViewBounds="true"
-        android:layout_gravity="center" />
+        </LinearLayout>
 
-    <TextView
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <!-- Mid Part of the Main Layout (Start) -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/mid_part"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Here are few best scientific exercise :"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="25dp"
-        android:textStyle="bold"
-        android:textColor="@color/darkblue"
-        android:textSize="18dp" />
 
+        app:layout_constraintBottom_toTopOf="@+id/lower_part"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/upper_part">
 
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <!-- Lower Part of the Main Layout (Options) -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/lower_part"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
 
-    <!-- ConstraintLayout to Manage Button and RecyclerView -->
-    <ImageView
-        android:id="@+id/flStart"
-        android:layout_width="280dp"
-        android:layout_height="280dp"
-        android:layout_marginTop="10dp"
-        android:src="@drawable/start"
-        android:adjustViewBounds="true"
-        android:layout_gravity="center" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" >
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@id/flStart"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/flStart">
 
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginBottom="10dp"
+            android:background="#f0f0f4" />
+
+        <!-- Other Options -->
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:layout_gravity="center"
+            android:layout_marginBottom="10dp"
             android:gravity="center"
-            android:layout_gravity="center">
+            android:orientation="horizontal">
 
-            <!-- History Section -->
+            <!-- Go to History -->
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
+                android:layout_marginEnd="100dp"
                 android:gravity="center"
-                android:layout_marginEnd="100dp">
+                android:orientation="vertical">
 
                 <ImageButton
                     android:id="@+id/ibHistory"
@@ -100,20 +152,21 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textStyle="bold"
                     android:layout_marginTop="15dp"
                     android:fontFamily="@font/regularroboto"
                     android:text="@string/history"
                     android:textColor="@color/darkblue"
-                    android:textSize="15sp"
-                    android:textStyle="bold" />
+                    android:textSize="15sp" />
+
             </LinearLayout>
 
-            <!-- BMI Section -->
+            <!-- Go to BMI -->
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:gravity="center">
+                android:gravity="center"
+                android:orientation="vertical">
 
                 <ImageButton
                     android:id="@+id/ibBmi"
@@ -125,13 +178,37 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textStyle="bold"
                     android:layout_marginTop="15dp"
                     android:fontFamily="@font/regularroboto"
                     android:text="@string/bmi"
                     android:textColor="@color/darkblue"
-                    android:textSize="15sp"
-                    android:textStyle="bold" />
+                    android:textSize="15sp" />
+
             </LinearLayout>
+
         </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+
+    <FrameLayout
+        android:id="@+id/flStart"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center"
+        android:background="@drawable/item_color_accent_border_ripple_bg"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/upper_part">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:fontFamily="@font/regularroboto"
+            android:text="Start"
+            android:textColor="@color/white"
+            android:textSize="40sp" />
+
+    </FrameLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
