--- a/app/src/main/res/layout/activity_records.xml
+++ b/app/src/main/res/layout/activity_records.xml
@@ -41,8 +41,8 @@
         android:textStyle="bold"
         android:layout_marginTop="21dp"
         android:layout_marginLeft="16dp"
-        android:textColorHint="@color/white"
-        android:textColor="@color/white"
+        android:textColorHint="@color/darkblue"
+        android:textColor="@color/darkBlue"
         android:layout_marginRight="16dp"
         android:background="@drawable/rounded_edittext"
         android:iconifiedByDefault="false"
