--- a/app/src/main/res/layout/activity_report_analysis.xml
+++ b/app/src/main/res/layout/activity_report_analysis.xml
@@ -11,35 +11,36 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp">
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="40dp"
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/back_button_logo"
-                android:layout_width="30dp"
+                android:id="@+id/back_error_logo"
+                android:layout_width="53dp"
                 android:layout_height="38dp"
-                android:src="@drawable/back_arrow_logo" />
+                android:src="@drawable/back_arrow_logo"
+                android:layout_marginLeft="15dp"
+                android:layout_gravity="center"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="SakshamSevak"
                 android:textColor="@color/darkblue"
-                android:textSize="26dp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:textSize="32sp"
+            android:layout_gravity="center"/>
         </LinearLayout>
 
         <!-- ImageView to add image and display selected image -->
         <ImageView
             android:id="@+id/add_image"
-            android:layout_width="340dp"
+            android:layout_width="380dp"
             android:layout_height="203dp"
             android:src="@drawable/add_image"
             android:layout_gravity="center"
