--- a/app/src/main/res/layout/are_you_sure_layout_dialog.xml
+++ b/app/src/main/res/layout/are_you_sure_layout_dialog.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:elevation="30dp"
+    android:elevation="10dp"
     android:background="@color/white"
-    app:cardCornerRadius="20dp">
+    android:layout_margin="16dp"
+    app:cardCornerRadius="16dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -49,10 +50,9 @@
             android:gravity="center"
             android:paddingStart="20dp"
             android:paddingEnd="20dp"
-            android:fontFamily="@font/regularroboto"
             android:text="@string/are_you_sure_you_want_to_quit_to_the_main_menu_the_progress_of_this_exercise_session_will_not_be_saved_if_you_continue"
             android:textColor="@color/darkvoilet"
-            android:textSize="17sp"
+            android:textSize="13sp"
             android:textAlignment="center" />
 
         <!-- Ok Button -->
@@ -63,10 +63,10 @@
             android:layout_gravity="center"
             android:layout_marginBottom="15dp"
             android:backgroundTint="@color/pink"
-            android:fontFamily="@font/regularroboto"
+            android:fontFamily="@font/blackroboto"
             android:text="@string/yes"
             android:textColor="@color/white"
-            android:textSize="18sp" />
+            android:textSize="15sp" />
 
     </LinearLayout>
 
