--- a/app/src/main/res/layout/dialog_delete_medicine.xml
+++ b/app/src/main/res/layout/dialog_delete_medicine.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     app:cardBackgroundColor="@color/white"
-    app:cardCornerRadius="30dp"
-    app:cardElevation="20dp">
+    app:cardCornerRadius="15dp"
+    app:cardElevation="10dp">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="370dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="10dp"
@@ -53,7 +53,6 @@
             android:backgroundTint="@color/pink"
             android:layout_gravity="center"
             android:text="@string/delete"
-            android:textSize="15dp"
             android:gravity="center"
             android:textColor="@color/white"
             android:fontFamily="@font/blackroboto" />
@@ -68,7 +67,6 @@
             android:gravity="center"
             android:background="@drawable/rounded_edittext"
             android:text="CANCEL"
-            android:textSize="15dp"
             android:textColor="@color/white"
             android:layout_marginLeft="20dp"
             android:fontFamily="@font/blackroboto" />
