--- a/app/src/main/res/layout/discount_dialog.xml
+++ b/app/src/main/res/layout/discount_dialog.xml
@@ -1,23 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    app:cardBackgroundColor="@color/white"
-    android:elevation="30dp"
-    app:cardCornerRadius="20dp">
+    android:background="@color/white"
+    android:elevation="10dp"
+    app:cardCornerRadius="26dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <FrameLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="20dp">
+        android:layout_gravity="center">
 
         <ImageView
             android:layout_width="200dp"
             android:layout_height="132dp"
-            android:layout_gravity="center"
+            android:layout_gravity="center_horizontal"
             android:src="@drawable/congo_logo" />
 
         <TextView
@@ -25,28 +24,26 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="Congratulations!"
-            android:fontFamily="@font/blackroboto"
+            android:layout_marginTop="20dp"
             android:textColor="@color/darkBlue"
             android:textSize="20sp" />
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="120dp"
+        android:orientation="vertical"> <!-- Center the text on the image -->
         <TextView
-            android:id="@+id/discount_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_margin="10dp"
             android:textColor="@color/darkvoilet"
-            android:fontFamily="@font/regularroboto"
             android:layout_gravity="center"
-            android:text="Based on your exercise stats,\nyou have received\n12% discount on this \nbilling!" />
+            android:text="Based on your exercise stats,\nyou have recieved
+12% discount on this \nbilling!" />
+        </LinearLayout>
 
-        <Button
-            android:id="@+id/ok_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="OK"
-            android:fontFamily="@font/regularroboto"
-            android:backgroundTint="@color/pink"
-            android:layout_marginTop="10dp"/>
-    </LinearLayout>
+    </FrameLayout>
+
+
 </androidx.cardview.widget.CardView>
