--- a/app/src/main/res/layout/item_exercise_status.xml
+++ b/app/src/main/res/layout/item_exercise_status.xml
@@ -9,11 +9,11 @@
     android:layout_marginEnd="3dp"
     android:padding="3dp"
     android:gravity="center"
-    android:background="@color/darkvoilet"
+    android:background="@drawable/item_circular_color_grey_background"
 
     android:fontFamily="@font/nunito_sans_bold"
     android:textSize="14sp"
-    android:textColor="@color/white"
+    android:textColor="@color/black"
     tools:text="1">
 
 </TextView>
