--- a/app/src/main/res/layout/item_history_row.xml
+++ b/app/src/main/res/layout/item_history_row.xml
@@ -4,9 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="7dp"
+    android:layout_margin="10dp"
     android:background="@drawable/drawable_radio_group_tab_background"
-    android:padding="8dp">
+    android:padding="3dp">
 
     <TextView
         android:id="@+id/tvSNumber"
@@ -15,7 +15,7 @@
 
         android:layout_marginStart="15dp"
         android:background="@drawable/item_circular_color_grey_background"
-        android:backgroundTint="@color/pink"
+        android:backgroundTint="@color/light_tone"
         android:fontFamily="@font/nunito_sans_bold"
         android:gravity="center"
 
@@ -34,7 +34,7 @@
         android:layout_height="wrap_content"
 
         android:background="@drawable/drawable_radio_group_tab_background"
-        android:backgroundTint="#5E40A4"
+        android:backgroundTint="#263546"
         android:fontFamily="@font/nunito_sans_bold"
         android:gravity="center"
 
@@ -56,7 +56,7 @@
         android:gravity="center"
 
         android:padding="3dp"
-        android:textColor="@color/darkvoilet"
+        android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
 
@@ -69,7 +69,6 @@
         android:layout_width="35dp"
         android:layout_height="35dp"
 
-        android:visibility="gone"
         android:layout_marginEnd="15dp"
         android:background="@drawable/remove"
 
