--- a/app/src/main/res/layout/progress_dailogs.xml
+++ b/app/src/main/res/layout/progress_dailogs.xml
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardElevation="30dp"
+    app:cardElevation="11dp"
     app:cardCornerRadius="20dp"
-    android:layout_gravity="center_horizontal"
     android:layout_margin="30dp"
     app:cardBackgroundColor="@color/white">
 
     <LinearLayout
-        android:layout_width="150dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_margin="32dp"
-        android:layout_gravity="center"
         android:background="@color/white"
         android:gravity="center">
 
