--- a/app/src/main/res/layout/want_to_delete_dialog.xml
+++ b/app/src/main/res/layout/want_to_delete_dialog.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     app:cardBackgroundColor="@color/white"
-    app:cardCornerRadius="20dp"
-    app:cardElevation="30dp">
+    app:cardCornerRadius="15dp"
+    app:cardElevation="10dp">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="370dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="10dp"
@@ -33,7 +33,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:fontFamily="@font/regularroboto"
             android:text="Are you sure?\n This will permanently delete your workout histories."
             android:textColor="@color/darkvoilet"
             android:textSize="19sp"
